--- a/.github/workflows/commenter.yml
+++ b/.github/workflows/commenter.yml
@@ -13,5 +13,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thank you for opening a PR! I'll get right to it🔥'
+              body: '👋 Thank you for opening a PR! I will get right to it🔥'
             })
