--- a/.github/workflows/commenter.yml
+++ b/.github/workflows/commenter.yml
@@ -1,9 +1,16 @@
+name: Commenter
+
 on:
   pull_request:
     types: [opened]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   comment:
+    name: Commenter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v7
